chore: upload example
